fixes mui svg icon alignment inside buttons

--- a/Binner/Binner.Web/ClientApp/src/custom.css
+++ b/Binner/Binner.Web/ClientApp/src/custom.css
@@ -1555,6 +1555,10 @@ section.formHeader {
 
 /* Icon hover colors */
 
+img, svg {
+  vertical-align: middle;
+}
+
 svg.MuiSvgIcon-root.parttype {
   color: var(--theme-parttype-icon-color) !important;
 }
